src/styles/global.scss
@use 'fonts';

:root {
    --header-size: 7vh;
    --main-padding: 20px;
    --navbar-width: 66%;

    --border: solid 1px black;

    --bg-color: white;
    --secondary-color: #eee;
    --disabled-color: #999;
    --text-color: black;

    --sans-serif-font: "PP Mori", sans-serif;
    --serif-font: "PP Writer", serif;

    --font-size: 1.2rem;

}

$tablet-width: 50rem;

@media screen and (min-width: 50rem) {
    :root {
        --navbar-width: 33%;
    }
}

@media screen and (min-width: 60rem) {
    :root {
        --main-padding: 40px;
    }
}

/* Set border-box globally */
html {
    box-sizing: border-box;
}

*, *::before, *::after {
    box-sizing: inherit;
}

body {
    display: flex;
    flex-direction: column;
    height: 100%;
    min-height: 100vh;
    font-family: var(--serif-font);
}

main {
    margin: var(--main-padding);
    padding: var(--main-padding);
    flex: 1 1 auto;
    height: 100%;
    border: var(--border);
    position: relative;

    display: flex;
    flex-direction: column;

    .wrapper {
        flex-grow: 1;
        min-height: 100%;
        position: relative;
        display: flex;
        flex-direction: column;
    }

    :first-child {
        margin-top: 0;
    }
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--sans-serif-font);
}

/* Header */
header {
    flex: 0 0 var(--header-size);
    position: sticky;
    top: 0px;

    width: 100%;
    border-bottom: var(--border);
    background-color: var(--bg-color);

    display: flex;
    align-items: center;
    justify-content: center;

    font-family: var(--sans-serif-font);

    z-index: 2;
}

nav {
    display: flex;
    flex-direction: row;
    width: var(--navbar-width);
    min-width: 250px;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    padding: 0px;

    .navbar-link {
        text-decoration: none;
        color: black;
        transition: all 0.25s ease;
        padding: 4px;
    }

    .navbar-link:hover {
        background-color: black;
        color: white;
    }

    .navbar-item::before {
        content: none;
    }
}

/* Footer */
footer {
    flex: 0 0 var(--header-size);

    width: 100%;
    border-top: var(--border);
    background-color: var(--bg-color);

    display: flex;
    align-items: center;
    justify-content: center;

    font-family: var(--sans-serif-font);

    .footer-content {
        display: flex;
        flex-direction: row;
        width: calc(100% - (2 * var(--main-padding)));
        justify-content: space-between;
        align-items: center;
        list-style: none;
        padding: 0px;
    }
}

